# py_neuromodulation

./: environment.yml  example_fooof.ipynb  pyproject.toml
dyskinesia/: dysk_feature_extraction.ipynb  dysk_gettingStarted.ipynb  dysk_preprocessing.ipynb  nm_settings.json  preproc_filters.py  preproc_reref.py  preprocessing.py
examples/: example_BIDS.ipynb  example_BIDS.py  example_BIDS_pitt.ipynb  example_decodingML.ipynb  example_externalMLModel.ipynb  example_lsl_stream.py  example_rereferencing.ipynb  run_pynm_rns.py
examples/data/: participants.tsv
py_neuromodulation/: FieldTrip.py  README.md  __init__.py  insert_line.bat  nm_EpochStream.py  nm_IO.py  nm_RMAP.py  nm_RealTimeClientStreamMultiprocessing.py  nm_RealTimeClientStreamSingleProcess.py  nm_RealTimeStreamApp.py  nm_across_patient_decoding.py  nm_analysis.py  nm_bursts.py  nm_coherence.py  nm_cohortwrapper.py  nm_decode.py  nm_define_nmchannels.py  nm_eval_timing.py  nm_features.py  nm_features_abc.py  nm_filter.py  nm_fooof.py  nm_generator.py  nm_hjorth_raw.py  nm_kalmanfilter.py  nm_linelength.py  nm_lsl_stream.py  nm_mne_connectiviy.py  nm_nolds.py  nm_normalization.py  nm_oscillatory.py  nm_plots.py  nm_projection.py  nm_rereference.py  nm_resample.py  nm_run_analysis.py  nm_settings.json  nm_settings.py  nm_sharpwaves.py  nm_stats.py  (+4 more)
py_neuromodulation/src/py_neuromodulation/: features.py  filter.py  generator.py  kalmanfilter.py  normalization.py  settings.py
src/py_neuromodulation/: __init__.py  analysis.py  oscillatory.py  processor.py  stream_abc.py  stream_offline.py
tests/: test_iirfilter.py
